ACS fix remaining text contrast WAVE issues

--- a/hnn_core/gui/gui_styles.css
+++ b/hnn_core/gui/gui_styles.css
@@ -214,7 +214,7 @@ padding-bottom: 10px !important;
     default visualization parameters
 */
 .sim-tab-titles {
-    background: gray;
+    background: #545454;
     color: white;
     width: 300px;
     padding: 0px 5px;
@@ -456,7 +456,7 @@ padding-bottom: 10px !important;
 
 /*  style figure placeholder text  */
 .fig-placeholder .widget-html-content {
-    color: #969696;
+    color: #545454;
     font-size: 13px;
     margin-top: 6px;
     text-align: center;
@@ -689,6 +689,10 @@ padding-bottom: 10px !important;
 }
 
 /*  adjust the style for all TabBar tabs  */
+/* Change the non-dark-mode tab title color */
+.lm-TabBar-tab {
+    color: #545454 !important;
+}
 .dark-mode .lm-TabBar-tab {
     background-color: var(--dm-bg-secondary) !important;
     color: var(--dm-text-main) !important;
@@ -862,7 +866,7 @@ padding-bottom: 10px !important;
 
 /*  restore background color for the simulation tab titles  */
 .dark-mode .widget-html.sim-tab-titles {
-    background-color: gray !important;
+    background-color: #545454 !important;
 
 }
 
